RESOLVED FIXED138911
Web Inspector: do not show invalid specificity for dynamic cases of :matches()
https://bugs.webkit.org/show_bug.cgi?id=138911
Summary Web Inspector: do not show invalid specificity for dynamic cases of :matches()
Benjamin Poulain
Reported 2014-11-19 20:45:03 PST
Web Inspector: do not show invalid specificity for dynamic cases of :matches()
Attachments
Patch (8.70 KB, patch)
2014-11-19 20:48 PST, Benjamin Poulain
joepeck: review+
Benjamin Poulain
Comment 1 2014-11-19 20:48:10 PST
Joseph Pecoraro
Comment 2 2014-11-20 16:46:58 PST
Comment on attachment 241922 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=241922&action=review > Source/WebCore/css/CSSSelector.cpp:179 > + staticSpecificity = CSSSelector::addSpecificities(staticSpecificity, functionalPseudoClassStaticSpecificity(firstSimpleSelector, ok)); > + return staticSpecificity; One line?
Benjamin Poulain
Comment 3 2014-11-20 20:30:52 PST
Note You need to log in before you can comment on or make changes to this bug.